using rest client but it is broken

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ quarkus.flyway.table=flyway_public_history
 # Logging
 quarkus.log.level=INFO
 quarkus.log.min-level=DEBUG
+
+# Interfaces
+quarkus.rest-client.instant-crud.url=http://localhost:8080/api
+quarkus.rest-client.instant-crud.scope=jakarta.inject.Singleton
