Add dockerfile and docker configuration

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,10 @@
-*
 !target/*-runner
 !target/*-runner.jar
 !target/lib/*
 !target/quarkus-app/*
+.idea
+.mvn
+automation/
+buildfiles/
+target/
+README.md
