--- a/automation/overlays/dev/kustomization.yaml
+++ b/automation/overlays/dev/kustomization.yaml
@@ -1,11 +1,26 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: instant-crud
+
 resources:
   - namespace.yaml
+  - ingress.yaml
   - ../../base/postgresql
-  -
+  - ../../base/instant-crud
+
+configMapGenerator:
+  - name: instant-crud-configuration
+    files:
+      - ./files/configurator.properties
+
+generatorOptions:
+  disableNameSuffixHash: true
 
 images:
     - name: "postgres"
+      newName: 'postgres'
       newTag: "15"
+    - name: "instant-crud"
+      newName: 10.10.0.222.5000/instant-crud
+      newTag: "1.0.0"
